--- a/machine.html
+++ b/machine.html
@@ -67,6 +67,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<p><span class="badge badge-light">San Francisco, California</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=o9uCafw9&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nFkQoMwu'>Align Technology Careers - Software Development Engineer in Test (Python) - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -115,7 +119,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698444359-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698444359-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -144,7 +148,7 @@
 <p>5 days ago ... Familiar in using common algorithms (SVM, Naive Bayes, Random Forest) and 
 Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <hr/>
-<h5><a href='https://engineering.academickeys.com/job/yqowp9mj/'>University Job: Assistant Professor (Tenure Track) in Electrical &amp; Computer Engineering (AI &amp; Machine Learning), Ryerson University</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.academickeys.com/job/yqowp9mj/'>University Job: Assistant Professor (Tenure Track) in Electrical &amp; Computer Engineering (AI &amp; Machine Learning), Ryerson University</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -260,7 +264,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -277,7 +281,7 @@ healthcare?...</p>
 <p>Oct 8, 2019 ... At Blueground, our vision is to make people feel at home wherever they choose 
 to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...</p>
 <hr/>
-<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -364,7 +368,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999697820294-machine-learning-ml-engineer-authorship-product'>Turnitin, LLC Machine Learning (ML) Engineer- Authorship Product | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999697820294-machine-learning-ml-engineer-authorship-product'>Turnitin, LLC Machine Learning (ML) Engineer- Authorship Product | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -386,11 +390,11 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.csiro.au/job/Brisbane%2C-QLD-Senior-Research-Scientist-Machine-Learning-for-Robotics/594982300/'>Senior Research Scientist - Machine Learning for Robotics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.csiro.au/job/Brisbane%2C-QLD-Senior-Research-Scientist-Machine-Learning-for-Robotics/594982300/'>Senior Research Scientist - Machine Learning for Robotics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -486,12 +490,8 @@ to?...</p>
 <p><span class="badge badge-light">Buenos Aires  Buenos Aires</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/443932-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
+<h5><a href='https://so1.join.com/jobs/443932-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-19</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/medallia/7c7e6f2c-85ce-4c7b-8e65-d777f1df5532'>Medallia - Research Scientist - Machine Learning, AI & NLP</a></h5> 
-<p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
 
